--- a/public/json/user-settings.json
+++ b/public/json/user-settings.json
@@ -1,1 +1,1 @@
-{"currentUser":"anik","users":[{"id":"anik","name":"Anik","dataSource":"anik"},{"id":"abbu","name":"Abbu","dataSource":"abbu"}]}
+{"currentUser":"mitul","users":[{"id":"anik","name":"Anik","dataSource":"anik"},{"id":"abbu","name":"Abbu","dataSource":"abbu"},{"id":"mitul","name":"Mitul","dataSource":"mitul"}]}
